Added first part of discriminative training theory

--- a/tutorials/hmm_training.ipynb
+++ b/tutorials/hmm_training.ipynb
@@ -25,9 +25,11 @@
     "  - [3.3 Estimation-maximization, formally](#3.3-Estimation-maximization,-formally)\n",
     "  - [3.4 Deriving the update equations for a normal distribution](#3.4-Deriving-the-update-equations-for-a-normal-distribution)\n",
     "- [4 Discriminative training](#4-Discriminative-training)\n",
+    "  - [4.1 Discriminative training theory](#4.1-Discriminative-training-theory)\n",
+    "  - [4.2 Labeling skewed data with normal distributions](#4.2-Labeling-skewed-data-with-normal-distributions)\n",
     "- [5 Conclusion](#5-Conclusion)\n",
     "\n",
-    "The material in sections two and three owes a heavy debt to two sources, respectively. The first is the book *[Biological Sequence Analysis](https://doi.org/10.1017/CBO9780511790492)*, which is an excellent resource on HMMs and other probabilistic models. The second is the paper [Hidden Neural Networks](https://doi.org/10.1162/089976699300016764) by Anders Krogh and Søren Riism. Many of the theoretical results for HMMs shown here are adapted or expanded from the proofs outlined in those references, so this tutorial wouldn't have been possible without them.\n",
+    "The material in sections two and three owes a heavy debt to two sources, respectively. The first is the book *[Biological Sequence Analysis](https://doi.org/10.1017/CBO9780511790492)*, which is an excellent resource on HMMs and other probabilistic models and their applications to biological sequence data. The second is the paper [Hidden Neural Networks](https://doi.org/10.1162/089976699300016764) by Anders Krogh and Søren Riism. Many of the theoretical results for HMMs shown here are adapted or expanded from the derivations outlined in those references, so this tutorial wouldn't have been possible without them.\n",
     "\n",
     "Anyway, we have a lot of ground to cover, so let's get started!\n",
     "\n",
@@ -1640,7 +1642,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "In the HMM setting with known states, the data is composed of $N$ examples of ordered pairs $\\{(x_i, y_i)|1 \\le i \\le N\\}$ where $x_i$ is a sequence of states and $y_i$ is a sequence of emissions, each with length $T_i$. For simplicity, however, we'll only consider a single example $(x, y)$ where $x_t$ and $y_t$ indicate the $t$th state and emission in those sequences, respectively. We can then write the log-likelihood function as $L(\\theta) = \\log P(X=x, Y=y|\\theta)$. So far this is all review from the previous section. What about the case when we only know the emissions, $y$? Then the log-likelihood is $L(\\theta) = \\log P(Y=y|\\theta)$. Though we can calculate this quantity directly with the forward algorithm and thus in principle apply a number of optimization algorithms, we'll instead take a probabilistic approach and write the log-likelihood function as a sum over all possible state sequences:\n",
+    "In the HMM setting with known states, the data are composed of $N$ examples of ordered pairs $\\{(x_i, y_i)|1 \\le i \\le N\\}$ where $x_i$ is a sequence of states and $y_i$ is a sequence of emissions, each with length $T_i$. For simplicity, however, we'll only consider a single example $(x, y)$ where $x_t$ and $y_t$ indicate the $t$th state and emission in those sequences, respectively. We can then write the log-likelihood function as $L(\\theta) = \\log P(X=x, Y=y|\\theta)$. So far this is all review from the previous section. What about the case when we only know the emissions, $y$? Then the log-likelihood is $L(\\theta) = \\log P(Y=y|\\theta)$. Though we can calculate this quantity directly with the forward algorithm and thus in principle apply a number of optimization algorithms, we'll instead take a probabilistic approach and write the log-likelihood function as a sum over all possible state sequences:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -1807,11 +1809,70 @@
     "\n",
     "### 4.1 Discriminative training theory\n",
     "\n",
-    "Adapt presentation of theory from reference paper\n",
+    "Previously, we saw that maximum likelihood estimation and the EM algorithm often obtained parameter estimates which were reasonably close to their true values. However, what if we don't really care about the parameters, and we're instead more interested in using an HMM to predict labels? What if the model we've chosen for our data is wrong, or, even worse, the data are so messy that no tractible statistical model could ever hope describe it?\n",
     "\n",
-    "### 4.2 Example\n",
+    "The bad news is these all these things are frequently true when working with HMMs. While sometimes the parameters are inherently meaningful, more often than not HMMs are a tool to label data. In these cases, it's more important to get an accurate prediction of the states than an accurate estimate of the underlying parameters. If the data are actually described by the model, this distinction isn't as relevant because with enough data the parameters that yield the most accurate predictions will converge to the true parameters. However, real-world data are almost never fully described by statistical models, and in these cases the parameters that best \"fit\" the data are often not those that best predict the states. Furthermore, the phrase \"with enough data\" is actually a sneaky way of saying \"as the number of observations approaches infinity,\" so for all practical purposes the two parameter sets are solving distinct problems.\n",
     "\n",
-    "Some complex, real-world data with discriminative training"
+    "Let's clarify these distinctions by writing them formally. Recall that in maximum likelihood estimation for HMMs with known states, we perform the following optimization\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\hat{\\theta}_{ML}\n",
+    "&= \\text{argmax}_\\theta L(\\theta) \\\\\n",
+    "&=\\text{argmax}_\\theta \\log P(X=x, Y=y|\\theta) \\\\\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "where $x$ is a sequence of states and $y$ is a sequence of emissions, each with length $T$. In general, the optimization is conducted over a set of paired state and emission sequences, but since this won't change the key features of the following discussion, for simplicity we'll consider only a single state-emission pair.\n",
+    "\n",
+    "In contrast, conditional maximum likelihood solves the following optimization\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\hat{\\theta}_{CML}\n",
+    "&= \\text{argmax}_\\theta \\log P(X=x|Y=y, \\theta) \\\\\n",
+    "&= \\text{argmax}_\\theta \\log \\frac{P(X=x, Y=y, \\theta)}{P(Y=y|\\theta)} \\\\\n",
+    "&= \\text{argmax}_\\theta \\log P(X=x, Y=y, \\theta) - \\log P(Y=y|\\theta). \\\\\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "Notice this optimization is a slight modification of the previous, differing only by the term $-\\log P(Y=y|\\theta)$. To ease the following discussion, we'll make the substitutions\n",
+    "\n",
+    "$$\n",
+    "\\log P(X=x, Y=y, \\theta) = L_c(\\theta)\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "\\log P(Y=y|\\theta) = L_f(\\theta).\n",
+    "$$\n",
+    "\n",
+    "$L_c$ is the joint log-likelihood of the state and emission sequences, so the term is \"clamped\" by the true states. $L_f$ is the log-likelihood of the emission sequences only, so the term is \"free\" to account for all possible paths through the model. When expressed in this form, it seems a solution to the optimization should make $L_c$ as large as possible and $L_f$ as small as possible. However, $L_f \\ge L_c$ for any choice of $\\theta$ because $L_f$ includes the contributions of all possible paths. Thus, the best we can do is to make $L_c$ as close as possible to $L_f$, and this only happens if we minimize the contribution of paths which are not the true path. In other words, conditional maximum likelihood is maximum likelihood with an added penalty for parameter choices that favor alternate paths through the model.\n",
+    "\n",
+    "In the maximum likelihood case, we were able to decompose the optimization into independent products under some fairly general assumptions because when the state sequence was known we only had to consider a single path through the model. Here, however, the free term, $L_f$, forces us to consider all possible state sequences. As noted in the previous section, the number of state sequences grows exponentially with its length, so even if we were able to derive a closed-form solution, we would still have to contend with an intractible number of terms. We can't apply the EM algorithm either because this optimization doesn't depend on any hidden variables.\n",
+    "\n",
+    "We'll instead take a route distinct from all the approaches we've seen so far by using a method called gradient descent. Gradient descent is the workhorse for many modern machine learning techniques, so there are numerous online resources which explain it in detail. However, the basic idea is because the derivative of a function is a measure of its sensitivity to its inputs, we can use that information to iteratively improve an initial guess until we reach a minimum. For functions of two variables, the process is often visualized as progressively climbing down a mountain by taking small steps in the direction of steepest descent. The power of this technique is that it's much easier to take derivatives than it is to identify their zeros, so gradient descent can be applied to almost any optimization problem.\n",
+    "\n",
+    "Thus, we'll need to compute derivatives of the conditional maximum likelihood function. Because gradient descent is for finding minima, we redefine our maximization as a minimization by multiplying by negative one:\n",
+    "\n",
+    "$$\n",
+    "\\hat{\\theta}_{CML} = \\text{argmin}_\\theta -\\log P(X=x|Y=y, \\theta) = \\text{argmin}_\\theta L_c(\\theta) - L_f(\\theta)\n",
+    "$$\n",
+    "\n",
+    "It's a small change, but when we write the update equations, we can use the conventional form instead of having to flip the sign of the derivatives.\n",
+    "\n",
+    "TODO: Fix state labels in Baum-Welch\n",
+    "\n",
+    "TODO: Make sure use of labels, states, and emissions is consistent\n",
+    "\n",
+    "TODO: Change argmax to math operator\n",
+    "\n",
+    "TODO: Fix wrong expression for number of terms in sum over all paths\n",
+    "\n",
+    "### 4.2 Labeling skewed data with normal distributions\n",
+    "\n",
+    "Generating data with a gamma distribution and comparing fit with generatively and discriminatively trained models"
    ]
   }
  ],
