Fixed various typos and inconsistencies
Change list:
Typos in word tractable
Use of singular data
Made argmin/argmax operators
Paths are called state sequences for clarity

--- a/tutorials/hmm_intro.ipynb
+++ b/tutorials/hmm_intro.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# HMM Tutorial\n",
     "\n",
-    "Welcome to the HMM tutorial! Here we'll go over the basic functionality of Homomorph. It's a small package, so the explanation of the HMM class will be brief and will largely focus on formatting the inputs correctly. (HMMs are relatively parameter-rich, so the syntax for properly specifying all the components can be a little verbose!) The first portion of this tutorial is a brief introduction to HMM theory and applications, so feel free to skip to the next section if you're already familiar with HMMs.\n",
+    "Welcome to the HMM tutorial! Here we'll go over the basic functionality of Homomorph. It's a small package, so the explanation of the HMM class will be brief and will largely focus on formatting the inputs correctly. (HMMs are relatively parameter-rich, so the syntax for properly specifying all the components can be a little verbose!) The first portion of this tutorial is a short introduction to HMM theory and applications, so feel free to skip to the next section if you're already familiar with HMMs.\n",
     "\n",
     "## 1 HMM Theory and Applications\n",
     "\n",
