Cleaned up some typos in equations and added more to discriminative training theory

--- a/tutorials/hmm_training.ipynb
+++ b/tutorials/hmm_training.ipynb
@@ -137,7 +137,7 @@
     "\n",
     "(Note that here when we use subscripts, we're referring to the index **within** a sequence rather than the index of the example.)\n",
     "\n",
-    "All these capital letters are making this expression a little busy, so let's make a few common substitutions to simplify it. First, we'll assume there are $S$ states numbered from $1$ to $S$ and write the transition and start probabilities as $P(X_{t+1}=j|X_t=i) = a_{ij}$ and $P(X_1=i) = a_{0i}$, respectively. Finally, we'll define $e_i(y_t) = P(y_t|x=i, \\Theta)$. We can think of each $e_i$ as a function that accepts an emission $y_t$ and outputs the probability or probability density. Putting all this together, we have\n",
+    "All these capital letters are making this expression a little busy, so let's make a few common substitutions to simplify it. First, we'll assume there are $S$ states numbered from $1$ to $S$ and write the transition and start probabilities as $P(X_{t+1}=j|X_t=i, \\Theta) = a_{ij}$ and $P(X_1=i|\\Theta) = a_{0i}$, respectively. Finally, we'll define $e_i(y_t) = P(Y_t=y_t|X_t=i, \\Theta)$. We can think of each $e_i$ as a function that accepts an emission $y_t$ and outputs the probability or probability density. Putting all this together, we have\n",
     "\n",
     "$$\n",
     "P(X=x, Y=y|\\Theta) = e_{x_1}(y_1)a_{0x_1} \\prod_{t=1}^T e_{x_t}(y_t) a_{x_t x_{t+1}}.\n",
@@ -1710,7 +1710,7 @@
     "                \\sum_{t=1}^{T-1} \\log P(X_{t+1}=x_{t+1}|X_t=x_t, \\Theta)\n",
     "          \\right] \\\\\n",
     "= &\\sum_i P(X_1=i|Y=y, \\Theta_n) \\log P(X_1=i|\\Theta) \\\\\n",
-    "  &+ \\sum_i \\sum_{t=1}^T P(X_t=i|y, \\Theta_n) \\log P(Y_t=y_t|X_t=i, \\Theta) \\\\\n",
+    "  &+ \\sum_i \\sum_{t=1}^T P(X_t=i|Y=y, \\Theta_n) \\log P(Y_t=y_t|X_t=i, \\Theta) \\\\\n",
     "  &+ \\sum_{i, j} \\sum_{t=1}^{T-1} P(X_t=i, X_{t+1}=j|Y=y, \\Theta_n) \\log P(X_{t+1}=j|X_t=i, \\Theta). \\\\\n",
     "\\end{aligned}\n",
     "$$\n",
@@ -1721,7 +1721,7 @@
     "\\begin{aligned}\n",
     "\\sum_x P(X=x|Y=y, \\Theta_n) \\sum_{t=1}^T \\log P(Y_t=y_t|X_t=x_t, \\Theta)\n",
     "&= \\sum_x \\sum_{t=1}^T P(X=x|Y=y, \\Theta_n) \\log P(Y_t=y_t|X_t=x_t, \\Theta) \\\\\n",
-    "&= \\sum_i \\sum_{x \\setminus x_t} \\sum_{t=1}^T P(X=x|y, \\Theta_n) \\log P(Y_t=y_t|X_t=i, \\Theta) \\\\\n",
+    "&= \\sum_i \\sum_{x \\setminus x_t} \\sum_{t=1}^T P(X=x|Y=y, \\Theta_n) \\log P(Y_t=y_t|X_t=i, \\Theta) \\\\\n",
     "&= \\sum_i \\sum_{t=1}^T \\log P(Y_t=y_t|X_t=i, \\Theta) \\sum_{x \\setminus x_t} P(X=x|Y=y, \\Theta_n) \\\\\n",
     "&= \\sum_i \\sum_{t=1}^T P(X_t=i|Y=y, \\Theta_n) \\log P(Y_t=y_t|X_t=i, \\Theta). \\\\\n",
     "\\end{aligned}\n",
@@ -1815,7 +1815,7 @@
     "\n",
     "The bad news is these all these things are frequently true when working with HMMs. While sometimes the parameters are inherently meaningful, more often than not HMMs are a tool to label data. In these cases, it's more important to get an accurate prediction of the states than an accurate estimate of the underlying parameters. If the data are actually described by the model, this distinction isn't as relevant because with enough data the parameters that yield the most accurate predictions will converge to the true parameters. However, real-world data are almost never fully described by statistical models, and in these cases the parameters that best \"fit\" the data are often not those that best predict the states. Furthermore, the phrase \"with enough data\" is actually a sneaky way of saying \"as the number of observations approaches infinity,\" so for all practical purposes the two parameter sets are solving distinct problems.\n",
     "\n",
-    "Let's clarify these distinctions by writing them formally. Recall that in maximum likelihood estimation for HMMs with known states, we perform the following optimization\n",
+    "Let's clarify these distinctions by writing them formally. Recall that in maximum likelihood estimation for HMMs with known states, we perform the following optimization:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -1825,9 +1825,9 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "where $x$ is a sequence of states and $y$ is a sequence of emissions, each with length $T$. In general, the optimization is conducted over a set of paired state and emission sequences, but since this won't change the key features of the following discussion, for simplicity we'll consider only a single state-emission pair.\n",
+    "where $\\Theta$ is the set of model parameters and $x$ and $y$ are sequences of states and emissions, respectively, with lengths $T$. In general, the optimization is conducted over a set of paired state and emission sequences, but since this won't change the key features of the following discussion, for simplicity we'll consider only a single state-emission pair.\n",
     "\n",
-    "In contrast, conditional maximum likelihood solves the following optimization\n",
+    "In contrast, conditional maximum likelihood solves the following optimization:\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -1841,7 +1841,7 @@
     "Notice this optimization is a slight modification of the previous, differing only by the term $-\\log P(Y=y|\\Theta)$. To ease the following discussion, we'll make the substitutions\n",
     "\n",
     "$$\n",
-    "\\log P(X=x, Y=y, \\Theta) = L_c(\\Theta)\n",
+    "\\log P(X=x, Y=y|\\Theta) = L_c(\\Theta)\n",
     "$$\n",
     "\n",
     "and\n",
@@ -1850,7 +1850,7 @@
     "\\log P(Y=y|\\Theta) = L_f(\\Theta).\n",
     "$$\n",
     "\n",
-    "$L_c$ is the joint log-likelihood of the state and emission sequences, so the term is \"clamped\" by the true states. $L_f$ is the log-likelihood of the emission sequences only, so the term is \"free\" to account for all possible state sequences. When expressed in this form, it seems a solution to the optimization should make $L_c$ as large as possible and $L_f$ as small as possible. However, $L_f \\ge L_c$ for any choice of $\\Theta$ because $L_f$ includes the contributions of all possible state sequences. Thus, the best we can do is to make $L_c$ as close as possible to $L_f$, and this only happens if we minimize the contribution of state sequences which are not the true state sequence. In other words, conditional maximum likelihood is maximum likelihood with an added penalty for parameter choices that favor alternate state sequences.\n",
+    "$L_c$ is the joint log-likelihood of the state and emission sequences, so the term is \"clamped\" by the true states. $L_f$ is the log-likelihood of the emission sequences only, so the term is \"free\" to account for all possible state sequences. When expressed in this form, it seems a solution to the optimization should make $L_c$ as large as possible and $L_f$ as small as possible. However, $L_f \\ge L_c$ for any choice of $\\Theta$ because $L_f$ includes the contributions of all possible state sequences. Thus, the best we can do is to make $L_c$ as close as possible to $L_f$, and this only happens if we minimize the contribution of state sequences which are not the true sequence. In other words, conditional maximum likelihood is maximum likelihood with an added penalty for parameter choices that favor alternate state sequences.\n",
     "\n",
     "In the maximum likelihood case, we were able to decompose the optimization into independent products under some fairly general assumptions because when the state sequence was known we only had to consider a single term. Here, however, the free term, $L_f$, forces us to consider all possible state sequences. As noted in the previous section, the number of state sequences grows exponentially with its length, so even if we were able to derive a closed-form solution, we would still have to contend with an intractable number of terms. We can't apply the EM algorithm either because this optimization doesn't depend on any hidden variables.\n",
     "\n",
@@ -1859,10 +1859,50 @@
     "Thus, we'll need to compute derivatives of the conditional maximum likelihood function. Because gradient descent is for finding minima, we redefine our maximization as a minimization by multiplying by negative one:\n",
     "\n",
     "$$\n",
-    "\\hat{\\Theta}_{CML} = \\argmin_\\Theta -\\log P(X=x|Y=y, \\Theta) = \\argmin_\\Theta L_c(\\Theta) - L_f(\\Theta)\n",
+    "\\begin{aligned}\n",
+    "\\hat{\\Theta}_{CML}\n",
+    "&= \\argmin_\\Theta -\\log P(X=x|Y=y, \\Theta) \\\\\n",
+    "&= \\argmin_\\Theta \\log P(Y=y|\\Theta) - \\log P(X=x, Y=y|\\Theta) \\\\\n",
+    "&= \\argmin_\\Theta L_f(\\Theta) - L_c(\\Theta) \\\\\n",
+    "&= \\argmin_\\Theta L(\\Theta). \\\\\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "It's a small change, but when we write the update equations, we can use the conventional form instead of having to flip the sign of the derivatives.\n",
+    "\n",
+    "We're now ready to take derivatives. We'll start with $L_f$ for a generic parameter $\\theta \\in \\Theta$:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial L_f}{\\partial \\theta}\n",
+    "&= \\frac{1}{P(Y=y|\\Theta)} \\frac{\\partial P(Y=y|\\Theta)}{\\partial \\theta} \\\\\n",
+    "&= \\sum_x \\frac{1}{P(Y=y|\\Theta)} \\frac{\\partial P(X=x, Y=y|\\Theta)}{\\partial \\theta} \\\\\n",
+    "&= \\sum_x \\frac{P(X=x, Y=y|\\Theta)}{P(Y=y|\\Theta)} \\frac{\\partial \\log P(X=x, Y=y|\\Theta)}{\\partial \\theta} \\\\\n",
+    "&= \\sum_x P(X=x|Y=y, \\Theta) \\frac{\\partial \\log P(X=x, Y=y|\\Theta)}{\\partial \\theta}. \\\\\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "This expression is almost identical in structure to the function $Q(\\Theta|\\Theta_n)$ used in the EM algorithm. We can therefore use a similar series of tricks, namely expanding the log of a product as a sum of log terms and exchanging the order of summation, to obtain a tractable expression. To reduce the clutter, we'll also use the shorthand defined in the section on maximum likelihood estimation where $P(X_{t+1}=j|X_t=i) = a_{ij}$ and $e_i(y_t) = P(Y_t=y_t|X_t=i, \\Theta)$. After all the algebraic dust settles, we obtain the equation\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L_f}{\\partial \\theta} = \\sum_{t,i} \\frac{n_i(t)}{e_i(y_t)} \\frac{\\partial e_i(y_t)}{\\partial \\theta} + \\sum_{t,i,j} \\frac{n_{ij}(t)}{a_{ij}} \\frac{\\partial a_{ij}}{\\partial \\theta}.\n",
+    "$$\n",
+    "\n",
+    "The variables $n_i(t)$ and $n_{ij}(t)$ are defined as $P(X_t=i|Y=y, \\Theta)$ and $P(X_t=i, X_{t+1}=j|Y, \\Theta)$. Though they may look like new notation, they are nearly identical to quantities defined in the section on the EM algorithm and can be efficiently calculated with the forward and backward variables.\n",
+    "\n",
+    "A similar computation shows the derivative of the clamped log-likelihood is\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L_c}{\\partial \\theta} = \\sum_{t,i} \\frac{m_i(t)}{e_i(y_t)} \\frac{\\partial e_i(y_t)}{\\partial \\theta} + \\sum_{t,i,j} \\frac{m_{ij}(t)}{a_{ij}} \\frac{\\partial a_{ij}}{\\partial \\theta}.\n",
+    "$$\n",
+    "\n",
+    "$m_i(t)$ and $m_{ij}(t)$ are defined similarly to $n_i(t)$ and $n_{ij}(t)$. However, because the clamped log-likelihood is taken only over the true state sequence, they are in practice indicators of the state or transition at each time step. This means they are one if a state $i$ or transition from state $i$ to state $j$ occurred at time $t$ and are zero otherwise.\n",
+    "\n",
+    "HMMs are typically parameterized directly in terms of their transition probabilities. In this case, the derivative of the loss function simplifies to\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L(\\Theta)}{\\partial a_{ij}} = -\\frac{m_{ij} - n_{ij}}{a_{ij}}.\n",
+    "$$\n",
     "\n",
     "### 4.2 Labeling skewed data with normal distributions\n",
     "\n",
