Added calculation of normal update equations

--- a/tutorials/hmm_training.ipynb
+++ b/tutorials/hmm_training.ipynb
@@ -26,7 +26,8 @@
     "  - [3.4 Deriving the update equations for a normal distribution](#3.4-Deriving-the-update-equations-for-a-normal-distribution)\n",
     "- [4 Discriminative training](#4-Discriminative-training)\n",
     "  - [4.1 Discriminative training theory](#4.1-Discriminative-training-theory)\n",
-    "  - [4.2 Labeling skewed data with normal distributions](#4.2-Labeling-skewed-data-with-normal-distributions)\n",
+    "  - [4.2 Deriving the update equations for normal distributions](#4.3-Deriving-the-update-equations-for-normal-distributions)\n",
+    "  - [4.3 Labeling data with a misspecified model](#4.3-Labeling-data-with-a-misspecified-model)\n",
     "- [5 Conclusion](#5-Conclusion)\n",
     "\n",
     "The material in sections two and three owes a heavy debt to two sources, respectively. The first is the book *[Biological Sequence Analysis](https://doi.org/10.1017/CBO9780511790492)*, which is an excellent resource on HMMs and other probabilistic models and their applications to biological sequence data. The second is the paper [Hidden Neural Networks](https://doi.org/10.1162/089976699300016764) by Anders Krogh and Søren Riism. Many of the theoretical results for HMMs shown here are adapted or expanded from the derivations outlined in those references, so this tutorial wouldn't have been possible without them.\n",
@@ -475,7 +476,7 @@
    "source": [
     "Again the estimates are very close!\n",
     "\n",
-    "We'll finish this out with the start distribution. The overall idea is exactly the same, except now we're working with a single distribution rather than a dictionary of distributions. Technically, we can only estimate the start distribution from the initial state of each example. Since this severely limits the amount of data relative to the transitions, it may be tempting to use the state counts over all time points instead. However, this quantity will estimate the equilibrium distribution of the underlying Markov process, which is a function of the transition probabilities and independent from the start distribution. However, there may be data-specific reasons to think these quantities are equal, so this is again an example of a model selection decision."
+    "We'll finish this out with the start distribution. The overall idea is exactly the same, except now we're working with a single distribution rather than a dictionary of distributions. Technically, we can only estimate the start distribution from the initial state of each example. Since this severely limits the amount of data relative to the transitions, it may be tempting to use the state counts over all time steps instead. However, this quantity will estimate the equilibrium distribution of the underlying Markov process, which is a function of the transition probabilities and independent from the start distribution. However, there may be data-specific reasons to think these quantities are equal, so this is again an example of a model selection decision."
    ]
   },
   {
@@ -1825,7 +1826,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "where $\\Theta$ is the set of model parameters and $x$ and $y$ are sequences of states and emissions, respectively, with lengths $T$. In general, the optimization is conducted over a set of paired state and emission sequences, but since this won't change the key features of the following discussion, for simplicity we'll consider only a single state-emission pair.\n",
+    "where $\\Theta$ is the set of model parameters and $x$ and $y$ are sequences of states and emissions, respectively, with lengths $T$. In general, the optimization is conducted over a set of paired state and emission sequences, but since this won't change the key features of the following discussion, for simplicity we'll consider only a single state-emission sequence pair.\n",
     "\n",
     "In contrast, conditional maximum likelihood solves the following optimization:\n",
     "\n",
@@ -1896,18 +1897,102 @@
     "\\frac{\\partial L_c}{\\partial \\theta} = \\sum_{t,i} \\frac{m_i(t)}{e_i(y_t)} \\frac{\\partial e_i(y_t)}{\\partial \\theta} + \\sum_{t,i,j} \\frac{m_{ij}(t)}{a_{ij}} \\frac{\\partial a_{ij}}{\\partial \\theta}.\n",
     "$$\n",
     "\n",
-    "$m_i(t)$ and $m_{ij}(t)$ are defined similarly to $n_i(t)$ and $n_{ij}(t)$. However, because the clamped log-likelihood is taken only over the true state sequence, they are in practice indicators of the state or transition at each time step. This means they are one if a state $i$ or transition from state $i$ to state $j$ occurred at time $t$ and are zero otherwise.\n",
+    "$m_i(t)$ and $m_{ij}(t)$ are defined like $n_i(t)$ and $n_{ij}(t)$. However, because the clamped log-likelihood is taken only over the true state sequence, they are in practice indicators of the state or transition at each time step. This means they are one if a state $i$ or transition from state $i$ to state $j$ occurred at time $t$ and are zero otherwise.\n",
     "\n",
     "HMMs are typically parameterized directly in terms of their transition probabilities. In this case, the derivative of the loss function simplifies to\n",
     "\n",
     "$$\n",
-    "\\frac{\\partial L(\\Theta)}{\\partial a_{ij}} = -\\frac{m_{ij} - n_{ij}}{a_{ij}}.\n",
+    "\\frac{\\partial L}{\\partial a_{ij}} = -\\frac{m_{ij} - n_{ij}}{a_{ij}}\n",
     "$$\n",
     "\n",
-    "### 4.2 Labeling skewed data with normal distributions\n",
+    "where $n_{ij}$ and $m_{ij}$ are sums over all time steps of the previously defined quantities. While this is the derivative we're looking for, there is one issue. For a generic parameter, gradient descent updates are written in the form\n",
+    "\n",
+    "$$\n",
+    "\\theta_{t+1} = \\theta_t - \\eta \\frac{\\partial L}{\\partial \\theta_t}\n",
+    "$$\n",
+    "\n",
+    "where $\\eta$ is the *learning rate*, which controls the size of the steps down the mountain. When $\\eta$ is large, we make bold steps at the cost of sometimes going uphill if the loss landscape is bumpy. By making $\\eta$ small, we can ensure we always go downhill but potentially at a glacial pace. Our problem is this update equation does not incorporate the constraints $a_{ij} \\ge 0$ and $\\sum_j a_{ij} = 1$. In other words, there's nothing stopping a gradient descent update from making a transition probability greater than one or, even worse, negative. If that happens, we've moved outside the parameter space of our model, so there's no guarantee the gradient descent updates would remain meaningful for our optimization even if every mathematical operation were defined.\n",
+    "\n",
+    "This is a fundamental shortcoming of derivative-based methods, and there are many variants of gradient descent, *e.g.* projected gradient descent, which address constrained optimization. Fortunately, in this case the constraints allow us to still use vanilla gradient descent via a clever variable transformation. We instead define\n",
+    "\n",
+    "$$\n",
+    "a_{ij} = \\frac{e^{z_{ij}}}{\\sum_{j^\\prime} e^{z_{ij^\\prime}}}\n",
+    "$$\n",
+    "\n",
+    "and perform gradient descent on the auxiliary variables $z_{ij}$. Note that the symbol $e$ without any subscripts refers to the constant and not an emission distribution. The derivative relative to $z_{ij}$ is then given by\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial L}{z_{ij}} = -\\left[\n",
+    "                                   m_{ij} - n_{ij}\n",
+    "                                   - a_{ij} \\sum_{j^\\prime} \\left( m_{ij^\\prime} - n_{ij^\\prime} \\right)\n",
+    "                             \\right].\n",
+    "$$\n",
+    "\n",
+    "Further manipulations can yield an update equation that eliminates the auxiliary variables. However, in our implementation we'll work with the auxiliary variables directly, so the above is sufficient for our needs.\n",
+    "\n",
+    "### 4.2 Deriving the update equations for normal distributions\n",
+    "\n",
+    "This is about as far as we can go without specifying the model further, so let's now consider the case where the emission distributions are normal and each state is governed by different parameters. If $f_i$ is the probability density function for state $i$ with mean $\\mu_i$ and variance $\\sigma_i^2$, then the its derivative relative to $\\mu_i$ is\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial f_i(x)}{\\partial \\mu}\n",
+    "&= \\frac{1}{\\sqrt{2\\pi\\sigma_i^2}}\n",
+    "   e^{-\\frac{\\left( x-\\mu_i \\right)^2}{2\\sigma_i^2}}\n",
+    "   \\frac{x - \\mu_i}{\\sigma_i^2} \\\\\n",
+    "&= f_i(x) \\frac{x - \\mu_i}{\\sigma_i^2}, \\\\\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "and the derivative relative to $\\sigma_i^2$ is\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial f_i(x)}{\\partial \\sigma_i^2}\n",
+    "&= \\frac{1}{\\sqrt{2\\pi}} \\cdot -\\frac{1}{2}\n",
+    "   \\left( \\sigma_i^2 \\right)^{-\\frac{3}{2}}\n",
+    "   e^{-\\frac{\\left( x-\\mu_i \\right)^2}{2\\sigma_i^2}}\n",
+    "   +\n",
+    "   \\frac{1}{\\sqrt{2\\pi}}\n",
+    "   \\left( \\sigma_i^2 \\right)^{-\\frac{1}{2}}\n",
+    "   e^{-\\frac{\\left( x-\\mu_i \\right)^2}{2\\sigma_i^2}}\n",
+    "   \\cdot -\\frac{\\left( x-\\mu_i \\right)^2}{2}\n",
+    "   \\cdot -\\left( \\sigma_i^2 \\right)^{-2} \\\\\n",
+    "&= \\frac{f_i(x)}{2} \\left[ \\left( -\\sigma_i^2 \\right)^{-1}\n",
+    "                           + \\left( x - \\mu_i \\right)^2 \\left( \\sigma_i^2 \\right)^{-2}\n",
+    "                    \\right]. \\\\\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "The variances obey a non-negativity constraint, so we'll instead define\n",
+    "\n",
+    "$$\n",
+    "\\sigma_i^2 = e^{z_i}\n",
+    "$$\n",
+    "\n",
+    "and perform gradient descent on the auxiliary variable $z_i$. The new derivative is then easily calculated as\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial f_i(x)}{\\partial z_i} = \\frac{\\partial f_i(x)}{\\partial \\sigma_i^2}\n",
+    "                                        \\frac{\\partial \\sigma_i^2}{\\partial z_i}\n",
+    "$$\n",
+    "\n",
+    "using the chain rule.\n",
+    "\n",
+    "The final step is to put all these pieces together.\n",
+    "\n",
+    "### 4.3 Labeling data with a misspecified model\n",
     "\n",
     "Generating data with a gamma distribution and comparing fit with generatively and discriminatively trained models"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51571c01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
